--- a/ecommerce/index.html
+++ b/ecommerce/index.html
@@ -18,8 +18,8 @@ button { padding:8px 14px; border:none; background:black; color:white; border-ra
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </head>
 <body>
-<header><h2>MyShop – Catalogo Prodotti</h2></header>
-<div class="container" id="content">Caricamento...</div>
+<header><h2>ECOMMERCE</h2></header>
+<div class="container" id="content"> </div>
 
 <script>
 var DATA_SOURCES = {
